syntax = "proto3";

package btc;
option go_package = "github.com/manedurphy/grpc-web/pb";

import "google/api/annotations.proto";

message BitcoinDatum {
	string date = 1;
	double value = 2;
}


message BitcoinRequest {
}

message BitcoinResponse {
	repeated BitcoinDatum data = 1;
}

service BitcoinService {
	rpc GetBitCoinData (BitcoinRequest) returns (BitcoinResponse) {
		option (google.api.http) = {
			get: "/api/btc"
		};
	};
}